# cardano-prelude

./: .editorconfig  .envrc  .gitignore  CONTRIBUTING.md  README.md  bors.toml  cabal.project  cardano-prelude.cabal  ci.toml  default.nix  flake.nix  release.nix  shell.nix  snapshot.yaml  stack.yaml
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/workflows/: cabal.project.local-ghc-9.6  haskell.yml
cardano-prelude/: NOTICE  README.md  cardano-prelude.cabal
cardano-prelude-test/: cardano-prelude-test.cabal
cardano-prelude-test/src/Test/Cardano/: Prelude.hs
cardano-prelude-test/test/: test.hs
cardano-prelude/cbits/: closure_size.c
cardano-prelude/src/Cardano/: Prelude.hs
cardano-prelude/src/Cardano/Prelude/: Base.hs  Bool.hs  Compat.hs  ConvertText.hs  DerivingVia.hs  Either.hs  Error.hs  Formatting.hs  Functor.hs  Microlens.hs  Orphans.hs  Panic.hs  Read.hs  Safe.hs  Show.hs  Strict.hs
cardano-tasty-hedgehog/: LICENSE  cardano-tasty-hedgehog.cabal
cardano-tasty-hedgehog/src/Test/Cardano/Tasty/: Hedgehog.hs
cells/_automation/: ciJobs.nix  devshells.nix  library.nix  nixago.nix  packages.nix  tasks.nix
cells/_cloud/: actions.nix
cells/prelude/: apps.nix  devshellProfiles.nix  haskell.nix  library.nix  packages.nix
nix/: default.nix  haskell.nix  hix.nix  iohk-nix-src.json  sources.json  tullia.nix  util.nix
nix/.stack.nix/: default.nix
scripts/nix/: nixpkgs-src.json
src/Cardano/: Prelude.hs
src/Cardano/Prelude/: HeapWords.hs  Orphans.hs
src/Data/Sequence/: Strict.hs
test/: test.hs
(+26 files in other folders)
