cabal-version: 2.2

name:                 cardano-tasty-hedgehog
version:              0.1.0.0
synopsis:             Compatibility shim for tasty breakages
description:          Compatibility shim for tasty breakages.
license:              MIT
license-file:         LICENSE
author:               IOHK
maintainer:           operations@iohk.io
copyright:            2018-2022 IOHK
category:             Currency
build-type:           Simple

flag development
  description: Disable `-Werror`
  default: False
  manual: True

library
  hs-source-dirs:     src
  exposed-modules:    Test.Cardano.Tasty.Hedgehog
  build-depends:      base
                    , hedgehog
                    , tasty
                    , tasty-hedgehog
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Weverything
                      -fno-warn-all-missed-specialisations
                      -fno-warn-missing-deriving-strategies
                      -fno-warn-missing-import-lists
                      -fno-warn-missing-safe-haskell-mode
                      -fno-warn-prepositive-qualified-module
                      -fno-warn-safe
                      -fno-warn-unsafe

  if (!flag(development))
    ghc-options:      -Werror
